# python-data-uri

./: .gitignore  .pre-commit-config.yaml  .travis.yml  MANIFEST.in  README.rst  mypy.ini  pyproject.toml  ruff.toml  setup.py  tox.ini  ty.toml
.github/workflows/: tox.yaml
datauri/: __init__.py  datauri.py
tests/: test_datauri.py
